[gd_scene load_steps=21 format=3 uid="uid://bja8xinxca1bf"]

[ext_resource type="Texture2D" uid="uid://duxlabxh8arp3" path="res://Assets/Sprites/grid_bg.jpg" id="1_21xkr"]
[ext_resource type="PackedScene" uid="uid://b0cg81av02dbq" path="res://Levels/level_flag_test.tscn" id="1_jjvhh"]
[ext_resource type="Shader" uid="uid://dobmful5tajjg" path="res://Resources/chroma_key.gdshader" id="2_6bp64"]
[ext_resource type="Script" uid="uid://dnwf5jcl8qv7" path="res://Scripts/hud.gd" id="4_6bp64"]
[ext_resource type="Texture2D" uid="uid://b7lvspvh7wi2b" path="res://Assets/Sprites/white_border_tileset.png" id="4_6iyac"]
[ext_resource type="Texture2D" uid="uid://ksx1ij21h8jw" path="res://icon.svg" id="4_jjvhh"]
[ext_resource type="FontFile" uid="uid://bnt8n28p40v6a" path="res://Assets/Fonts/SeriousShanns-Bold.otf" id="5_6bp64"]
[ext_resource type="Texture2D" uid="uid://cle5wswimbfyx" path="res://Assets/Sprites/touch_screen_buttons.png" id="7_6bp64"]
[ext_resource type="Shader" uid="uid://bw2f2trnjl761" path="res://Resources/frosted_glass.gdshader" id="7_ynf5e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_344ge"]
shader = ExtResource("2_6bp64")
shader_parameter/chroma_key = Color(0.18039216, 0.03529412, 0.23137255, 1)
shader_parameter/intensity = 0.0010000000475

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhuoe"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0.72156864)
border_width_bottom = 3
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_21xkr"]
atlas = ExtResource("4_6iyac")
region = Rect2(1440, 160, 160, 160)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8gbba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjvhh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kry3j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_21xkr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6bp64"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_344ge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kry3j"]
size = Vector2(189.02, 380.71)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hptm8"]
shader = ExtResource("7_ynf5e")
shader_parameter/shape_type = 0
shader_parameter/rect_size = Vector2(300, 200)
shader_parameter/corner_radius_top_left = 100.0
shader_parameter/corner_radius_top_right = 100.0
shader_parameter/corner_radius_bottom_left = 100.0
shader_parameter/corner_radius_bottom_right = 100.0
shader_parameter/circle_radius = 100.0
shader_parameter/outline_enabled = false
shader_parameter/outline_width = 2.0
shader_parameter/outline_color = Color(1, 1, 1, 0.8)
shader_parameter/shadow_enabled = false
shader_parameter/shadow_color = Color(0, 0, 0, 0.5)
shader_parameter/shadow_offset = Vector2(10, 10)
shader_parameter/shadow_blur = 15.0
shader_parameter/edge_softness = 1.0
shader_parameter/shape_color = Color(0.3, 0.5, 0.9, 1)
shader_parameter/color_gradient_y = 1.5
shader_parameter/color_gradient_x = -0.8
shader_parameter/color_multiplier = 0.9
shader_parameter/enable_screen_blur = true
shader_parameter/blur_amount = 2.000000095
shader_parameter/blur_samples = 32
shader_parameter/glass_opacity = 0.150000007125
shader_parameter/node_size = Vector2(400, 400)

[node name="Main" type="Node2D"]

[node name="PlatformBgTexture" type="Sprite2D" parent="."]
modulate = Color(0.35617894, 0.06466895, 0.15147322, 1)
position = Vector2(577.09375, 325.5)
scale = Vector2(1.84375, 1.84375)
texture = ExtResource("1_21xkr")

[node name="PlatformBgColor" type="ColorRect" parent="."]
visible = false
offset_right = 1157.0
offset_bottom = 657.0
color = Color(0.18039216, 0.03529412, 0.23137255, 1)

[node name="Gameplay" type="Node2D" parent="."]

[node name="LevelLayer" type="CanvasLayer" parent="Gameplay"]
layer = 0
follow_viewport_enabled = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="Gameplay/LevelLayer"]
material = SubResource("ShaderMaterial_344ge")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Gameplay/LevelLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="LevelFlagTest" parent="Gameplay/LevelLayer/SubViewportContainer/SubViewport" instance=ExtResource("1_jjvhh")]

[node name="HUD" type="CanvasLayer" parent="." node_paths=PackedStringArray("coins_count_label", "platform_bg_texture", "platform_bg_color")]
script = ExtResource("4_6bp64")
coins_count_label = NodePath("Control/Panel/CoinsCountLabel")
platform_bg_texture = NodePath("../PlatformBgTexture")
platform_bg_color = NodePath("../PlatformBgColor")

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HUD/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.06481481
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hhuoe")
metadata/_edit_use_anchors_ = true

[node name="CoinsCountLabel" type="Label" parent="HUD/Control/Panel"]
layout_mode = 0
anchor_left = 0.11111111
anchor_top = 0.0952381
anchor_right = 0.16840278
anchor_bottom = 1.0952381
theme_override_fonts/font = ExtResource("5_6bp64")
theme_override_font_sizes/font_size = 32
text = "/"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="HUD/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06423611
anchor_top = 0.023809524
anchor_right = 0.11805555
anchor_bottom = 1.0
texture = SubResource("AtlasTexture_21xkr")
expand_mode = 1
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="LevelButton" type="Button" parent="HUD/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4592014
anchor_top = -0.04761905
anchor_right = 0.5677083
anchor_bottom = 1.1428572
theme_override_colors/font_pressed_color = Color(0.46666667, 0.63529414, 0.9529412, 1)
theme_override_colors/font_hover_color = Color(0.6745098, 0.9647059, 0.8117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.46666667, 0.63529414, 0.9529412, 1)
theme_override_fonts/font = ExtResource("5_6bp64")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_8gbba")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jjvhh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kry3j")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_21xkr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6bp64")
theme_override_styles/focus = SubResource("StyleBoxEmpty_344ge")
text = "Level X"
metadata/_edit_use_anchors_ = true

[node name="BgCheckButton" type="CheckButton" parent="HUD/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8454861
anchor_right = 0.9539931
anchor_bottom = 1.1904764
offset_right = 28.0
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.46666667, 0.63529414, 0.9529412, 1)
theme_override_colors/font_hover_color = Color(0.6745098, 0.9647059, 0.8117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.46666667, 0.63529414, 0.9529412, 1)
theme_override_constants/h_separation = 14
theme_override_fonts/font = ExtResource("5_6bp64")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_8gbba")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jjvhh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kry3j")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_21xkr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6bp64")
theme_override_styles/focus = SubResource("StyleBoxEmpty_344ge")
button_pressed = true
text = "Cool BG"
metadata/_edit_use_anchors_ = true

[node name="LeftTouchAnchors" type="Control" parent="HUD/Control"]
layout_mode = 1
anchor_left = 0.072
anchor_top = 0.886
anchor_right = 0.072
anchor_bottom = 0.886
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="LeftTouchButton" type="TouchScreenButton" parent="HUD/Control/LeftTouchAnchors"]
position = Vector2(34.056, -5.1279907)
shape = SubResource("RectangleShape2D_kry3j")
passby_press = true
action = "Left"

[node name="Frost" type="Sprite2D" parent="HUD/Control/LeftTouchAnchors/LeftTouchButton"]
material = SubResource("ShaderMaterial_hptm8")
position = Vector2(-17.330002, -13.950012)
scale = Vector2(1.62, 1.62)
texture = ExtResource("4_jjvhh")
region_enabled = true
region_rect = Rect2(0, 0, 107, 105)

[node name="TextureLeft" type="Sprite2D" parent="HUD/Control/LeftTouchAnchors/LeftTouchButton"]
self_modulate = Color(1, 1, 1, 0.66300005)
position = Vector2(0, 3)
texture = ExtResource("7_6bp64")
region_enabled = true
region_rect = Rect2(0, 0, 107, 105)

[node name="RightTouchAnchors" type="Control" parent="HUD/Control"]
layout_mode = 1
anchor_left = 0.198
anchor_top = 0.886
anchor_right = 0.198
anchor_bottom = 0.886
offset_left = 19.0
offset_top = -40.0
offset_right = 59.000015
grow_vertical = 0

[node name="RightTouchButton" type="TouchScreenButton" parent="HUD/Control/RightTouchAnchors"]
position = Vector2(39.904007, -2.1279907)
shape = SubResource("RectangleShape2D_kry3j")
passby_press = true
action = "Right"

[node name="Frost" type="Sprite2D" parent="HUD/Control/RightTouchAnchors/RightTouchButton"]
material = SubResource("ShaderMaterial_hptm8")
position = Vector2(-16.999985, -18)
scale = Vector2(1.62, 1.62)
texture = ExtResource("4_jjvhh")
region_enabled = true
region_rect = Rect2(0, 0, 107, 105)

[node name="TextureRight" type="Sprite2D" parent="HUD/Control/RightTouchAnchors/RightTouchButton"]
self_modulate = Color(1, 1, 1, 0.66300005)
texture = ExtResource("7_6bp64")
region_enabled = true
region_rect = Rect2(107, 0, 107, 105)

[node name="JumpTouchAnchors" type="Control" parent="HUD/Control"]
layout_mode = 1
anchor_left = 0.882
anchor_top = 0.886
anchor_right = 0.882
anchor_bottom = 0.886
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="JumpTouchButton" type="TouchScreenButton" parent="HUD/Control/JumpTouchAnchors"]
position = Vector2(2.9359741, -2.1279907)
shape = SubResource("RectangleShape2D_kry3j")
passby_press = true
action = "Jump"

[node name="Frost" type="Sprite2D" parent="HUD/Control/JumpTouchAnchors/JumpTouchButton"]
material = SubResource("ShaderMaterial_hptm8")
position = Vector2(-17.999985, -18)
scale = Vector2(1.62, 1.62)
texture = ExtResource("4_jjvhh")
region_enabled = true
region_rect = Rect2(0, 0, 107, 105)

[node name="TextureJump" type="Sprite2D" parent="HUD/Control/JumpTouchAnchors/JumpTouchButton"]
self_modulate = Color(1, 1, 1, 0.66300005)
texture = ExtResource("7_6bp64")
region_enabled = true
region_rect = Rect2(214, 0, 107, 105)

[connection signal="toggled" from="HUD/Control/Panel/BgCheckButton" to="HUD" method="_on_bg_check_button_toggled"]
